# terraform_example

./: .gitignore  Dockerfile  LICENSE  build_docker.sh  pyproject.toml  run_docker.sh
src/terraform_aws_example_slow126/: docker_test.py  main.py
src/terraform_aws_example_slow126/terraform_aws_instance/: main.tf
