[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terraform-aws-example-slow126"
version = "0.0.1"
authors = [
  { name="Spencer Low", email="spencerlow126@gmail.com" },
]
description = "A small example package for terraform on aws"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"